--- a/client/src/Form.css
+++ b/client/src/Form.css
@@ -5,7 +5,7 @@
 
 .code-form {
   width: 70%;
-  margin: 0 auto;
+  margin: 0 auto; 
 }
 
 .input-boxes {
@@ -47,6 +47,7 @@
 label {
   border: 1px solid #ccc;
   border-radius: 5px;
+  
 }
 
 .translate {
@@ -63,7 +64,9 @@ label,
 .submit {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.mrr{
+  margin-right: 0.5em;
+}
 .btn {
   display: flex;
   justify-content: space-between;
